welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {

  }
  
	def dessinTout(){
  	for (colonne <-1 to 3){
    	ligneMotif()
    	monterColonne()
  	}
	}
	def monterColonne(){
  	ligneMotif()
  	recule(14)
  	gauche()
  	avance(7)
  	droite()
	}
	def ligneMotif(){
  	for (plop <-1 to 2){}
  	faireMotif()
  	avance(7)}
	}

	def faireMotif(){
  	for (cote <-1 to 4){
    	avance(2)
    	faireV()
    	avance(2)
    	gauche()
  	}
	}


	def marquerSol(){
  	baisseBrosse()
  	leveBrosse()
	}

	def faireV(){
  	marquerSol()
  	avance()
  	gauche()
  	avance()
  	marquerSol()
  	recule()
  	droite()
  	avance()
  	marquerSol()
	}
